# mola_state_estimation-release

./: .clang-tidy  AGENTS.md  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.github/workflows/: build-ros.yml
apps/: mola-mm-add-geodetic-cli.cpp  mola-sm-georeferencing-cli.cpp  mola-trajectory-georef-cli.cpp
cla/: individual-cla.md
debian/: changelog  control  copyright  gbp.conf  rules
docs/: georef-apps.rst  mola_state_estimators.rst
include/mola_gtsam_factors/: FactorAngularVelocityIntegration.h  FactorGnssMapEnu.h  FactorTricycleKinematic.h
include/mola_imu_preintegration/: IMUIntegrationParams.h  ImuInitialCalibrator.h  ImuTransformer.h  RotationIntegrationParams.h  RotationIntegrator.h
include/mola_state_estimation_simple/: Parameters.h  StateEstimationSimple.h
include/mola_state_estimation_smoother/: FactorTricycleKinematics.h  Parameters.h  StateEstimationSmoother.h
mola_georeferencing/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_georeferencing/apps/: mola-mm-add-geodetic-cli.cpp  mola-sm-georeferencing-cli.cpp  mola-trajectory-georef-cli.cpp
mola_georeferencing/include/mola_georeferencing/: simplemap_georeference.h
mola_georeferencing/src/: simplemap_georeference.cpp
mola_georeferencing/tests/: CMakeLists.txt  m2dgr_gate01_gps.simplemap
mola_gtsam_factors/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mola_gtsam_factors/include/mola_gtsam_factors/: FactorAngularVelocityIntegration.h  FactorConstLocalVelocity.h  FactorGnssEnu.h  FactorTrapezoidalIntegrator.h  FactorTricycleKinematic.h  MeasuredGravityFactor.h  Pose3RotationFactor.h  gtsam_detect_version.h  id.h
mola_gtsam_factors/src/: FactorAngularVelocityIntegration.cpp  FactorConstLocalVelocity.cpp  FactorGnssEnu.cpp  MeasuredGravityFactor.cpp  Pose3RotationFactor.cpp
mola_imu_preintegration/: .clang-format  CHANGELOG.rst  CMakeLists.txt  package.xml
mola_imu_preintegration/include/mola_imu_preintegration/: IMUIntegrationParams.h  RotationIntegrationParams.h  RotationIntegrator.h
mola_imu_preintegration/src/: IMUIntegrationParams.cpp  RotationIntegrationParams.cpp  RotationIntegrator.cpp  register.cpp
mola_imu_preintegration/tests/: test-imu-rotation-integrator.cpp
mola_state_estimation/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_state_estimation_simple/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_state_estimation_simple/include/mola_state_estimation_simple/: Parameters.h  RegexCache.h  StateEstimationSimple.h
mola_state_estimation_simple/src/: Parameters.cpp  StateEstimationSimple.cpp  register.cpp
mola_state_estimation_simple/tests/: CMakeLists.txt  test-state-estimation-simple.cpp
mola_state_estimation_smoother/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_state_estimation_smoother/apps/: mola-navstate-cli.cpp
mola_state_estimation_smoother/include/mola_state_estimation_smoother/: FactorTricycleKinematics.h  Parameters.h  StateEstimationSmoother.h  pose_pdf_to_string_with_sigmas.h
mola_state_estimation_smoother/mola-cli-launchs/: demo_lidar_odom_plus_wheel_odom_fusion.yaml  state_estimator_ros2.yaml
mola_state_estimation_smoother/params/: state-estimation-smoother.yaml
mola_state_estimation_smoother/ros2-launchs/: ros2-fuse-two-odometries.launch.py  ros2-state-estimator.launch.py
mola_state_estimation_smoother/src/: FactorAngularVelocityIntegration.h  FactorConstAngularVelocity.h  FactorConstLocalVelocity.h  FactorTrapezoidalIntegrator.h  Parameters.cpp  StateEstimationSmoother.cpp  pose_pdf_to_string_with_sigmas.cpp  register.cpp
mola_state_estimation_smoother/test/integration/: common.py  sensor_mock_node.py  test_static_convergence.py
mola_state_estimation_smoother/tests/: mola-navstate-fg-params.yaml  test-lidar-imu-leveling.cpp  test-navstate-basic.cpp  test-static-gnss-imu-orientation.cpp  test-twist-fusion.cpp  test-two-odometries.cpp
params/: state-estimation-smoother.yaml
ros2-launchs/: ros2-state-estimator.launch.py
rpm/: ros-humble-mola-georeferencing.spec  ros-humble-mola-gtsam-factors.spec  ros-humble-mola-imu-preintegration.spec  ros-humble-mola-state-estimation-simple.spec  ros-humble-mola-state-estimation-smoother.spec  ros-humble-mola-state-estimation.spec  ros-jazzy-mola-georeferencing.spec  ros-jazzy-mola-gtsam-factors.spec  ros-jazzy-mola-imu-preintegration.spec  ros-jazzy-mola-state-estimation-simple.spec  ros-jazzy-mola-state-estimation-smoother.spec  ros-jazzy-mola-state-estimation.spec  ros-kilted-mola-georeferencing.spec  ros-kilted-mola-gtsam-factors.spec  ros-kilted-mola-imu-preintegration.spec  ros-kilted-mola-state-estimation-simple.spec  ros-kilted-mola-state-estimation-smoother.spec  ros-kilted-mola-state-estimation.spec  ros-lyrical-mola-georeferencing.spec  ros-lyrical-mola-gtsam-factors.spec  ros-lyrical-mola-state-estimation-simple.spec  ros-lyrical-mola-state-estimation-smoother.spec  ros-lyrical-mola-state-estimation.spec  ros-rolling-mola-georeferencing.spec  ros-rolling-mola-gtsam-factors.spec  ros-rolling-mola-imu-preintegration.spec  ros-rolling-mola-state-estimation-simple.spec  ros-rolling-mola-state-estimation-smoother.spec  ros-rolling-mola-state-estimation.spec  template.spec
scripts/: generate_statuses_table.py
src/: FactorConstAngularVelocity.h  FactorConstLocalVelocity.h  FactorGnssMapEnu.cpp  FactorTrapezoidalIntegrator.cpp  FactorTrapezoidalIntegrator.h  FactorTricycleKinematic.cpp  ImuInitialCalibrator.cpp  ImuTransformer.cpp  Parameters.cpp  RotationIntegrationParams.cpp  RotationIntegrator.cpp  StateEstimationSimple.cpp  StateEstimationSmoother.cpp  register.cpp  simplemap_georeference.cpp
test/integration/: test_moving_georef.py
test/integration/data/: moving_test_smoother_params.yaml  static_test_smoother_params.yaml
tests/: CMakeLists.txt  test-imu-rotation-integrator.cpp  test-lidar-imu-leveling.cpp  test-navstate-basic.cpp  test-navstate-odom-gnss-fusion.cpp  test-state-estimation-simple.cpp  test_imu_attitude.cpp
